# pigeongame

./: .bazelrc  .gitignore  BUILD.bazel  BUILD.md  LICENSE  MODULE.bazel  Readme.md
.bazelrc.d/: buildbuddy.rc  performance.rc
app/: BUILD.bazel
app/Pigeon Game/Assets/: NetworkBandwidthTester.cs
app/Pigeon Game/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
app/Pigeon Game/Assets/TextMesh Pro/Resources/Fonts & Materials/: LiberationSans SDF - Fallback.asset
app/Pigeon Game/ProjectSettings/: ProjectSettings.asset
app/pigeon-game/: BUILD.bazel
app/pigeon-game/Assets/: PlayerController.cs  PlayerInputActions.cs  PlayerInputActions.inputactions
app/pigeon-game/Assets/Materials/: Skybox.mat
app/pigeon-game/Assets/Materials/DevGrids/: Checkerboard_Gray.mat  Grid_Black.mat  Grid_White.mat  UVGrid.mat
app/pigeon-game/Assets/Scenes/: SampleScene.unity  The Lab.unity
app/pigeon-game/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
app/pigeon-game/Assets/Shaders/: CheckerboardShader.shader  GridShader.shader  Skybox.shader  UVGridShader.shader
app/pigeon-game/ProjectSettings/: ProjectSettings.asset
app/pigeon_game/: .gitignore
app/pigeon_game/Assets/Editor/: BuildScript.cs
dev-log/: Rambling.md
iac/talos/local_cluster/: build-security.yaml  controlplane.patch.yaml  old_cluster.sh  pisp-cluster.sh  test-join-wg.sh  test-wireguard.sh  viz-dream.txt  wireguard-cp-patch.yaml  wireguard-worker-patch.yaml  worker.patch.yaml
iac/talos/local_cluster/viz/: .gitignore  README.md  database.py  logging_config.py  main.py  main_old.py  mesh_cli.py  mesh_manager.py  models.py  test_quick.py  utils.py
iac/talos/local_cluster/viz/static/css/: style.css
iac/talos/local_cluster/viz/static/js/: app.js
iac/talos/local_cluster/viz/templates/: index.html
iac/talos/local_cluster/viz/tests/: test_base.py  test_cli.py  test_hub_connections.py  test_integration.py  test_mesh_manager.py  test_node_data.py  test_simple.py  test_unit.py
k8s/apps/: BUILD.bazel
k8s/apps/flock-manager/: BUILD.bazel
k8s/apps/flock-manager/viz/: .gitignore  README.md  mesh_cli.py  requirements.txt  run.py
k8s/apps/flock-manager/viz/static/js/: app.js
k8s/apps/flock-manager/viz/tests/: test_hub_connections.py  test_integration.py  test_mesh_manager.py
k8s/apps/pisp-perf/: BUILD.bazel  main.go
k8s/apps/shared/python-base/: BUILD.bazel  main.py  py_web_app.bzl  requirements.txt
k8s/cni/: BUILD.bazel  Dockerfile  Readme.md  go.mod  go.sum  install_cni.sh  main.go
tools/: bazel  canary.sh
tools/canaries.template/: README.md.template  check.sh.template
tools/canaries/bazel/: README.md  check.sh
tools/canaries/docker/: README.md  check.sh
tools/canaries/k9s/: README.md  check.sh
tools/canaries/kubectl/: README.md  check.sh
tools/canaries/talosctl/: README.md  check.sh
tools/canaries/tofu/: README.md  check.sh
tools/unity/: BUILD.bazel  README.md  defs.bzl  extensions.bzl  unity.bzl
