load("//tools/unity:unity.bzl", "unity_build", "unity_run")

# pigeon_game Unity project
# Note: The Unity project is in "pigeon_game" subdirectory (with space),
# but we reference it from this BUILD file to avoid Bazel's issues with spaces in package names.

unity_build(
    name = "pigeon_game",
    project_root = "pigeon_game/ProjectSettings/ProjectVersion.txt",
    srcs = glob([
        "pigeon_game/Assets/**/*",
        "pigeon_game/ProjectSettings/**/*",
        "pigeon_game/Packages/**/*",
    ], exclude = [
        "pigeon_game/Library/**",
        "pigeon_game/.vs/**",
        "pigeon_game/Temp/**",
        "pigeon_game/Logs/**",
        "pigeon_game/obj/**",
        "pigeon_game/Build/**",
        "pigeon_game/Builds/**",
        "**/*.meta",  # Exclude meta files for faster builds
    ]),
    build_method = "BuildScript.Build",
    tags = ["manual"],
)

unity_run(
    name = "pigeon_game_editor",
    project_root = "pigeon_game/ProjectSettings/ProjectVersion.txt",
    srcs = glob([
        "pigeon_game/Assets/**/*",
        "pigeon_game/ProjectSettings/**/*",
        "pigeon_game/Packages/**/*",
    ], exclude = [
        "pigeon_game/Library/**",
        "pigeon_game/.vs/**",
        "pigeon_game/Temp/**",
        "pigeon_game/Logs/**",
        "pigeon_game/obj/**",
    ]),
)

# Platform-specific builds
unity_build(
    name = "pigeon_game_windows",
    project_root = "pigeon_game/ProjectSettings/ProjectVersion.txt",
    srcs = glob([
        "pigeon_game/Assets/**/*",
        "pigeon_game/ProjectSettings/**/*",
        "pigeon_game/Packages/**/*",
    ], exclude = [
        "pigeon_game/Library/**",
        "pigeon_game/.vs/**",
        "pigeon_game/Temp/**",
        "pigeon_game/Logs/**",
        "pigeon_game/obj/**",
        "pigeon_game/Build/**",
        "pigeon_game/Builds/**",
    ]),
    build_target = "Win64",
    build_method = "BuildScript.BuildWindows",
    tags = ["manual"],
)

unity_build(
    name = "pigeon_game_linux",
    project_root = "pigeon_game/ProjectSettings/ProjectVersion.txt",
    srcs = glob([
        "pigeon_game/Assets/**/*",
        "pigeon_game/ProjectSettings/**/*",
        "pigeon_game/Packages/**/*",
    ], exclude = [
        "pigeon_game/Library/**",
        "pigeon_game/.vs/**",
        "pigeon_game/Temp/**",
        "pigeon_game/Logs/**",
        "pigeon_game/obj/**",
        "pigeon_game/Build/**",
        "pigeon_game/Builds/**",
    ]),
    build_target = "Linux64",
    build_method = "BuildScript.BuildLinux",
    tags = ["manual"],
)
