load("//tools/unity:unity.bzl", "unity_build", "unity_run", "unity_project")


# Pigeon Game Unity project
unity_project(
    name = "pigeon_game",
    project_path = "pigeon-game",
    build_method = "BuildScript.Build",
    unity_version = "6000.2.2f1",
    packages = [
        "textmeshpro",
        "inputsystem",
        "ugui",
    ],
)
