load("//tools/unity:unity.bzl", "unity_project")

# Pigeon Game Unity project
unity_project(
    name = "pigeon_game",
    project_path = ".",
    build_method = "BuildScript.Build",
)

# Platform-specific builds
# Uncomment to create explicit platform build targets:

# unity_build(
#     name = "pigeon_game_windows",
#     project_root = "ProjectSettings/ProjectVersion.txt",
#     srcs = glob([
#         "Assets/**/*",
#         "ProjectSettings/**/*",
#         "Packages/**/*",
#     ], exclude = [
#         "Library/**",
#         ".vs/**",
#         "Temp/**",
#         "Logs/**",
#         "obj/**",
#         "Build/**",
#         "Builds/**",
#     ]),
#     build_target = "Win64",
#     build_method = "BuildScript.BuildWindows",
#     tags = ["manual"],
# )
